--- a/css/project.css
+++ b/css/project.css
@@ -108,7 +108,7 @@ input:focus, .input-message:focus {
     position: relative;
     left: 30%;
     padding: 0.75rem 2.5rem;
-    background-color: #019f6c;
+    background-color: #07bb81;
     color: white;
     border-radius: 10px 10px;
     font-size: 1.1rem;
@@ -118,7 +118,7 @@ input:focus, .input-message:focus {
 }
 
 .btn-submit:hover, .btn-submit:focus {
-    background-color: #057e57;
+    background-color: #045e23;
 }
 
 /* .Name{
