--- a/css/css-style.css
+++ b/css/css-style.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css");
 
 *{
     box-sizing: border-box;
@@ -27,17 +29,18 @@
     align-items: center;
 }
 .menu-icon{
-    visibility: hidden;
+    display: none;
 }
 .header-logo{
     display: flex;
     flex: 20%;
-    /* justify-content: end; */
 }
+
 .menu-icon{
-    display: flex;
+    display: none;
     flex: 10%;
 }
+
 .nav-links{
     display: flex;
     flex: 70%;
@@ -49,15 +52,24 @@
     color: #c86319;
     transition: color 0.3ms ease-in-out;
     font-size: 1.25rem;
-    padding: 1.5rem;
+    padding: 0.75rem;
 }
 
-.nav-links a:hover{
+.nav-links span{
+    padding: 0.5rem;
+}
+
+.active{
+    background-color: #04AA6D;
+    color: #FFF;
+}
+
+.nav-links span:hover{
     color: blue;
 }
 
 .welcome-container{
-    height: 80vh;
+    height: 55vh;
     background-image: url("../images/Main/Coveimage.jpg");
     background-repeat: no-repeat;
     background-position: center;
@@ -90,10 +102,131 @@
     padding: 1.25rem 0;
 }
 
-.main-items{
+.welcometext{
+    padding-bottom: 0.25rem;
+    border-block-end: 1px solid #BBB;
+    transform: translateX(150%);
+    animation: welcometext-roll 2s linear forwards;
+}
+
+@keyframes welcometext-roll {
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+.welcometext h1{
+    font-family: 'PT Serif', serif;
+}
+
+.main-area-2{
+    width: 75%;
+    margin: auto;
+}
+
+.column-full{
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
+    gap: 5%;
+}
+
+.welcome-img-col{
+    flex: 50%;
+    transform: translateX(-150%);
+    animation: welcome-img-col-roll 2s linear forwards;
+}
+
+@keyframes welcome-img-col-roll {
+    100% {
+      transform: translateX(0%);
+    }
+}
+
+.img-welcome{
+    width: 100%;
+    height: 350px;
+    padding: 1.5rem;
+}
+
+.row-text{
+    flex: 50%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+    transform: translateX(150%);
+    animation: welcometext-roll 2s linear forwards;
+}
+
+@keyframes welcometext-roll {
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+.main-area-3{
+    width: 90%;
+    margin: auto;
+}
+
+.img-gallery{
+    display: flex;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+    justify-content: flex-end;
+    overflow-x: scroll;
+}
+
+.column-img{
+    display: flex;
+    flex: 16.66%;
+    padding: 5px;
+    justify-content: right;
+}
+
+.column-img1{
+    z-index: -1;
+    transform: translateX(500%);
+    animation: ani-roll 3s linear forwards;
+}
+
+.column-img2{
+    z-index: -2;
+    transform: translateX(400%);
+    animation: ani-roll 3s linear forwards;
+}
+
+.column-img3{
+    z-index: -3;
+    transform: translateX(300%);
+    animation: ani-roll 3s linear forwards;
+}
+
+.column-img4{
+    z-index: -4;
+    transform: translateX(200%);
+    animation: ani-roll 3s linear forwards;
+}
+
+.column-img5{
+    z-index: -5;
+    transform: translateX(100%);
+    animation: ani-roll 3s linear forwards;
+}
+
+.column-img6{
+    z-index: -6;
+}
+
+@keyframes ani-roll {
+    100% {
+      transform: translateX(0%);
+    }
+}
+
+.slide-img{
+    width: 100%;
     height: 100%;
 }
 
@@ -102,19 +235,6 @@
     padding: 0;
     margin: 5px;
     width: 32.70%;
-}
-
-.main-item-img:hover{       
-    object-fit: cover;
-}
-
-.main-item-img{
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    object-fit: fill;
-    border: 2px solid #E0DEFFDE;
-    border-radius: 15px;
 }
 
 .footer-container{
@@ -151,13 +271,19 @@
     .welcome-container{
         height: 60vh;
     }
+
     .nav-links, .header-logo{
         justify-content: start;
     }
+
     .nav-links{
+        display: none;
         text-align: center;
         flex-direction: column;
-        visibility: collapse;
+    }
+    
+    .nav-links-open{
+        display: flex;
     }
 
     .nav-links a{
@@ -172,13 +298,9 @@
     }
 
     .menu-icon{
-        visibility: visible;
+        display: flex;
         justify-content: end;
         padding: 0 0.5rem 0 0;
-    }
-
-    .menu-icon:hover + .nav-links{
-        visibility: visible;
     }
 
     .logo-image{
@@ -187,11 +309,15 @@
     }
 
     .welcome-items h1{
-        font-size: 1.50rem;
+        font-size: 20px;
     }
 
     .welcome-items h3{
-        font-size: 0.95rem;
+        font-size: 15px;
+    }
+
+    .welcometext h1{
+        font-size: 16px;
     }
 
     .main-container-full{
@@ -206,9 +332,34 @@
         font-size: larger;
     }
 
+    .main-area-2{
+        width: 100%;
+        margin: auto;
+    }
+
+    .column-full{
+        flex-direction: column;
+    }
+
+    .img-welcome{
+        height: 100%;
+    }
+
+    .row-text{
+        font-size: 12px;
+    }
+
     .main-area{
         width: 100%;
         margin: auto;
+    }
+
+    .img-gallery{
+        flex-wrap: wrap;
+    }
+
+    .column-img{
+        flex: 50%;
     }
 
     .projects {
