--- a/css/project.css
+++ b/css/project.css
@@ -61,7 +61,6 @@ a{
     padding: 1.5rem;
     margin: 0 1.5rem;
     background-color: #FFF;
-    /* box-shadow: 2px 3px 15px #888888 */
 }
 
 .enquery-img{
@@ -88,7 +87,7 @@ input, .input-message{
     padding:15px 10px;
     margin-bottom:10px;
     border: none;
-    border-bottom: 3px solid #ffdede;
+    border-block-end: 3px solid #ffdede;
     -webkit-transition: 0.5s ease-in-out;
     transition: 0.5s ease-in-out;
     outline: none;
@@ -96,7 +95,7 @@ input, .input-message{
 
 input:focus, .input-message:focus {
     border: none;
-    border-bottom: 3px solid #1dce41;
+    border-block-end: 3px solid #1dce41;
 }
 
 .input-message{
