--- a/css/css-style.css
+++ b/css/css-style.css
@@ -237,6 +237,19 @@
     width: 32.70%;
 }
 
+.main-item-img:hover{       
+    object-fit: cover;
+}
+
+.main-item-img{
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    object-fit: fill;
+    border: 2px solid #E0DEFFDE;
+    border-radius: 15px;
+}
+
 .footer-container{
     background-color: #507012;
     font-family: "Poppins", sans-serif;
@@ -324,10 +337,6 @@
         padding: 1.5rem;
     }
 
-    .main-items{
-        flex-direction: column;
-    }
-
     h2{
         font-size: larger;
     }
@@ -353,7 +362,7 @@
         width: 100%;
         margin: auto;
     }
-
+    
     .img-gallery{
         flex-wrap: wrap;
     }
